<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.nimble.surveys.features.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_white"
            app:layout_constraintBottom_toTopOf="@+id/edt_email"
            app:layout_constraintEnd_toEndOf="@+id/edt_passsword"
            app:layout_constraintStart_toStartOf="@+id/edt_passsword"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/EdtThemeWhite14"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/edt_passsword"
            app:layout_constraintEnd_toEndOf="@+id/edt_passsword"
            app:layout_constraintStart_toStartOf="@+id/edt_passsword"
            android:onTextChanged="@{(s, i, j, c)->viewModel.onEmailChange(s.toString())}"
            android:text="@={viewModel.email}"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_passsword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/password"
            android:maxLength="20"
            style="@style/EdtThemeWhite14"
            android:inputType="textPassword"
            android:onTextChanged="@{(s, i, j, c)->viewModel.onPasswordChange(s.toString())}"
            android:text="@={viewModel.password}"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonMainStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/edt_passsword"
            app:layout_constraintStart_toStartOf="@+id/edt_passsword"
            app:layout_constraintTop_toBottomOf="@+id/edt_passsword" />

        <TextView
            android:id="@+id/txt_forgot"
            style="@style/TextThemeWhite14"
            android:textColor="@color/white73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/edt_passsword"
            app:layout_constraintEnd_toEndOf="@+id/edt_passsword"
            app:layout_constraintTop_toTopOf="@+id/edt_passsword" />

        <include
            android:id="@+id/progress_bar"
            layout="@layout/view_progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>